# OpenOrbitLink

./: .gitignore  demo.py  next_implementation.md  readme.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android-ci.yml  python-tests.yml  rust-ci.yml
ai/: __init__.py  orbital_predictor.py
ai/doppler_prediction/: __init__.py  model.py  train.py
ai/link_manager/: __init__.py
ai/speech_enhance/: __init__.py
android/: settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/freesat/: MainActivity.kt
android/app/src/main/java/org/freesat/api/: ApiClient.kt  Models.kt  OpenOrbitLinkApi.kt
android/app/src/main/java/org/freesat/auth/: ApiClient.kt  AuthTokenManager.kt
android/app/src/main/java/org/freesat/codec/: Codec2Native.kt  NeuralEnhancer.kt  PushToTalkEngine.kt  VoiceCodecManager.kt  VoiceMessage.kt
android/app/src/main/java/org/freesat/discovery/: NearbyPassScorer.kt  NearbyPassService.kt
android/app/src/main/java/org/freesat/hal/: UsbDeviceActivity.kt
android/app/src/main/java/org/freesat/mesh/: MeshRelayService.kt
android/app/src/main/java/org/freesat/network/: ConnectivityOrchestrator.kt
android/app/src/main/java/org/freesat/ntn/: NtnCapabilityDetector.kt
android/app/src/main/java/org/freesat/ui/components/: ByteCounter.kt  DutyCycleGauge.kt  MessageStatusIndicator.kt  PassTimeline.kt
android/app/src/main/java/org/freesat/ui/screens/: GroundStationScreen.kt  HardwareSetupScreen.kt  LinkDashboardScreen.kt  LoginScreen.kt  NetworkPathScreen.kt  SatelliteMapScreen.kt  SatellitePassScreen.kt  SatelliteRadarScreen.kt  Screens.kt  SkyScannerScreen.kt  ThroughputDashboard.kt
android/app/src/main/java/org/freesat/ui/theme/: Theme.kt
android/app/src/main/java/org/freesat/viewmodel/: MessagingViewModel.kt  SatelliteViewModel.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  styles.xml
android/app/src/main/res/xml/: usb_device_filter.xml
backend/: __init__.py  adaptive_modem.py  auth.py  benchmark.py  config.py  database.py  lr_fhss.py  main.py  passes.py  rate_limiter.py  requirements.txt  satellite_radar.py  speed_test.py  starlink_intelligence.py  turbo_compression.py  tx_queue.py  voice_messaging.py
codec2-android/: CMakeLists.txt
codec2-android/jni/: codec2_jni.c
docker/: docker-compose.yml
docker/backend/: Dockerfile
docker/ground-station/: Dockerfile
docker/simulation/: Dockerfile
docs/: android-ndk-setup.md  architecture.md  benchmark-results.md  ground-station-setup.md  hardware-guide.md  implementation-report.md  ntn-comparison.md  openorbitlink_paper.tex  product-layer-roadmap.md  protocol-spec.md  reading-plan.md  regulatory-compliance.md  research-papers.md  rtl_sdr_ground_station_guide.tex  voice-codec-architecture.md
dsp/: __init__.py
dsp/flowgraphs/: __init__.py  iss_aprs_decode.py  noaa_apt_receive.py
ground_station/: __init__.py  doppler.py  freesat.proto  freesat_pb2.py  freesat_pb2_grpc.py  grpc_server.py  inbox_router.py  lora_driver.py  pass_integration.py  relay_daemon.py  tinygs_client.py
hardware/: ground-station-bom.csv  rpi_setup.md
native/: CMakeLists.txt
native/include/: adaptive_codec_manager.h  airtime_calculator.h  audio_frame.h  codec_interface.h  codec_registry.h  neural_enhancer.h  packet_loss_recovery.h  tflite_runtime.h  voice_chunker.h
native/jni/: codec_bridge_jni.c
native/src/: codec2_fec.c  codec2_wrapper.c  lyra_codec_wrapper.cc  neural_enhancer.cc
protocol/: __init__.py  aprs.py  aprs_bridge.py  bpv7.py  dtn.py  dtn_routing.py  fossa.py  license.py  mesh.py  ntn.py  packet.py  voice_transport.py
protocol-rs/: Cargo.toml
protocol-rs/src/: lib.rs  packet.rs
scripts/: fetch_tle.py  pass_scheduler.py
security/: __init__.py  bpsec.py
simulation/: __init__.py  constellation_sim.py  link_budget.py
tests/: __init__.py  benchmark_suite.py  test_backend.py  test_codec_abstraction.py  test_e2e.py  test_e2e_simulation.py  test_pass_scheduler.py  test_protocol_standards.py  test_rate_limiter.py  test_voice_pipeline.py
